# advent_of_code_2023

./: README.md  pyproject.toml
.github/workflows/: python-app.yml
Day_1/tests/: test_main.py
Day_2/: main.py
Day_2/tests/: test_main.py
Day_3/: main.py
Day_3/tests/: test_main.py
Day_4/: main.py
Day_4/tests/: test_main.py
Day_5/: main.py
Day_5/tests/: test_main.py
Day_6/: main.py
Day_6/tests/: test_main.py
cc-template/: cookiecutter.json
cc-template/{{ cookiecutter.project_slug }}/: main.py
cc-template/{{ cookiecutter.project_slug }}/tests/: test_main.py
day1/: main.py
day1/tests/: test_main.py
day2/: main.py
day2/tests/: test_main.py
day3/: main.py
day3/tests/: test_main.py
dayx/: main.py
dayx/tests/: test_main.py
