[tool.poetry]
name = "aoc2023"
version = "0.1.0"
description = ""
authors = ["MattC333"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
ruff = "^0.1.6"
black = "^23.11.0"
cookiecutter = "^2.4.0"
pytest = "^7.4.3"
pre-commit = "^3.5.0"
coverage = "^7.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--ignore=cc-template"

[tool.ruff]
exclude = ["cc-template"]
